# job-tracker

./: .flaskenv  .gitignore  README.md  config.py  data-dev.sqlite  job_tracker.py  package-lock.json  package.json  pyproject.toml  scripts.py
app/: __init__.py
app/api/: utils.py  validators.py
app/api/models/: __init__.py  jobs.py  profile.py
app/api/schema/: __init__.py  auth.py  jobs.py  profile.py  schema.py
app/frontend/: views.py
app/templates/: cover_letter.html  cv.html  header.html
migrations/versions/: 1c32da516491_.py  2b7d847f0a24_.py  3486b6c6f481_.py  44c946927851_.py  4c5056f10ddf_.py  53b903539ec0_.py  73980253a656_.py  933714c025da_.py  a5cee1880545_.py  a6a6cb73a933_.py  d35513f95fae_.py  e55576f4658a_.py  f68a2e6e7150_.py
public/: index.html
src/: App.vue  cv_and_cover.scss  link.js  main.js  router.js  utils.js
src/components/: Bouncer.vue  CardTitle.vue  Spinner.vue
src/components/layout/: Footer.vue  Header.vue  Notification.vue
src/modals/: AddEditAddressModal.vue  AddEditEducationModal.vue  AddEditEventModal.vue  AddEditPersonalProjectModal.vue  AddEditSkillModal.vue  AddEditWorkExperienceModal.vue  AddJobModal.vue  DeleteModal.vue  modalProps.js
src/store/: index.js
src/store/modules/: auth.js  jobDetails.js  jobs.js  notifications.js  profile.js  spinners.js
src/views/: Landing.vue  Login.vue  PrintCV.vue  PrintPage.vue  Register.vue  Stats.vue
src/views/JobDetails/: CoverLetter.vue  CustomizedCV.vue  Events.vue  index.vue
src/views/Jobs/: TableHeading.vue  index.vue
src/views/Profile/: CVItem.vue  CardTitle.vue  (+1 more)
