[tool.poetry]
name = "job-tracker"
version = "0.1.0"
description = ""
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
graphene = "^2.1.8"
sqlalchemy = "^1.3.16"
graphene-sqlalchemy = "^2.2.2"
flask_sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
